force-app/main/default/objects/VIP_Info_Meal__c/VIP_Info_Meal__c.object-meta.xml
<CustomObject>
    <label>VIP Info Meal</label>
    <nameField>
        <displayFormat>VM-{00000000}</displayFormat>
        <label>VIP Info Meal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIP Info Meal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>