force-app/main/default/objects/VIP_Info_Meal__c/fields/Dessert__c.field-meta.xml
<CustomField>
    <fullName>Dessert__c</fullName>
    <label>Dessert</label>
    <type>TextArea</type>
</CustomField>