force-app/main/default/objects/VIP_Info_Meal__c/fields/Dessert_Drinks__c.field-meta.xml
<CustomField>
    <fullName>Dessert_Drinks__c</fullName>
    <label>Dessert Drinks</label>
    <type>TextArea</type>
</CustomField>