force-app/main/default/objects/VIP_Info_Meal__c/fields/Dessert_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Dessert_Remarks__c</fullName>
    <label>Dessert Remarks</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>