force-app/main/default/objects/VIP_Info_Meal__c/fields/Main_Course__c.field-meta.xml
<CustomField>
    <fullName>Main_Course__c</fullName>
    <label>Main Course</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MIBF</fullName>
            </value>
            <value>
                <fullName>MILM</fullName>
            </value>
            <value>
                <fullName>MIPK</fullName>
            </value>
            <value>
                <fullName>MICK</fullName>
            </value>
            <value>
                <fullName>MIDK</fullName>
            </value>
            <value>
                <fullName>MIGS</fullName>
            </value>
            <value>
                <fullName>MISF</fullName>
            </value>
            <value>
                <fullName>MILB</fullName>
            </value>
            <value>
                <fullName>MIFS</fullName>
            </value>
            <value>
                <fullName>MIEG</fullName>
            </value>
            <value>
                <fullName>MIVG</fullName>
            </value>
            <value>
                <fullName>MIFP</fullName>
            </value>
            <value>
                <fullName>MIDR</fullName>
            </value>
            <value>
                <fullName>MACG</fullName>
            </value>
            <value>
                <fullName>MABF</fullName>
            </value>
            <value>
                <fullName>MALM</fullName>
            </value>
            <value>
                <fullName>MAPK</fullName>
            </value>
            <value>
                <fullName>MACK</fullName>
            </value>
            <value>
                <fullName>MADK</fullName>
            </value>
            <value>
                <fullName>MAGS</fullName>
            </value>
            <value>
                <fullName>MASF</fullName>
            </value>
            <value>
                <fullName>MALB</fullName>
            </value>
            <value>
                <fullName>MAFS</fullName>
            </value>
            <value>
                <fullName>MAEG</fullName>
            </value>
            <value>
                <fullName>MAVG</fullName>
            </value>
            <value>
                <fullName>MAFP</fullName>
            </value>
            <value>
                <fullName>MADR</fullName>
            </value>
            <value>
                <fullName>SEML</fullName>
            </value>
            <value>
                <fullName>VOML</fullName>
            </value>
            <value>
                <fullName>VLML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>