force-app/main/default/objects/VIP_Info_Meal__c/fields/Main_Course_Drinks__c.field-meta.xml
<CustomField>
    <fullName>Main_Course_Drinks__c</fullName>
    <label>Main Course Drinks</label>
    <type>TextArea</type>
</CustomField>