force-app/main/default/objects/VIP_Info_Meal__c/fields/Main_Course_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Main_Course_Remarks__c</fullName>
    <label>Main Course Remarks</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>