force-app/main/default/objects/VIP_Info_Meal__c/fields/Snack__c.field-meta.xml
<CustomField>
    <fullName>Snack__c</fullName>
    <label>Snack</label>
    <type>TextArea</type>
</CustomField>