force-app/main/default/objects/VIP_Info_Meal__c/fields/Snack_Drinks__c.field-meta.xml
<CustomField>
    <fullName>Snack_Drinks__c</fullName>
    <label>Snack_Drinks</label>
    <type>TextArea</type>
</CustomField>