force-app/main/default/objects/VIP_Info_Meal__c/fields/Starter__c.field-meta.xml
<CustomField>
    <fullName>Starter__c</fullName>
    <label>Starter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STBF</fullName>
            </value>
            <value>
                <fullName>STLM</fullName>
            </value>
            <value>
                <fullName>STPK</fullName>
            </value>
            <value>
                <fullName>STCK</fullName>
            </value>
            <value>
                <fullName>STDK</fullName>
            </value>
            <value>
                <fullName>STGS</fullName>
            </value>
            <value>
                <fullName>STSF</fullName>
            </value>
            <value>
                <fullName>STLB</fullName>
            </value>
            <value>
                <fullName>STFS</fullName>
            </value>
            <value>
                <fullName>STEG</fullName>
            </value>
            <value>
                <fullName>STVG</fullName>
            </value>
            <value>
                <fullName>STFP</fullName>
            </value>
            <value>
                <fullName>STDR</fullName>
            </value>
            <value>
                <fullName>STCV</fullName>
            </value>
            <value>
                <fullName>SUBF</fullName>
            </value>
            <value>
                <fullName>SULM</fullName>
            </value>
            <value>
                <fullName>SUPK</fullName>
            </value>
            <value>
                <fullName>SUCK</fullName>
            </value>
            <value>
                <fullName>SUDK</fullName>
            </value>
            <value>
                <fullName>SUGS</fullName>
            </value>
            <value>
                <fullName>SUSF</fullName>
            </value>
            <value>
                <fullName>SULB</fullName>
            </value>
            <value>
                <fullName>SUFS</fullName>
            </value>
            <value>
                <fullName>SUEG</fullName>
            </value>
            <value>
                <fullName>SUVG</fullName>
            </value>
            <value>
                <fullName>SUFP</fullName>
            </value>
            <value>
                <fullName>SUDR</fullName>
            </value>
            <value>
                <fullName>SABF</fullName>
            </value>
            <value>
                <fullName>SALM</fullName>
            </value>
            <value>
                <fullName>SAPK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>