force-app/main/default/objects/VIP_Info_Meal__c/fields/Starter_Drinks__c.field-meta.xml
<CustomField>
    <fullName>Starter_Drinks__c</fullName>
    <label>Starter Drinks</label>
    <type>TextArea</type>
</CustomField>