force-app/main/default/objects/VIP_Info_Meal__c/fields/Starter_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Starter_Remarks__c</fullName>
    <label>Starter Remarks</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>