force-app/main/default/objects/VIP_Info_Meal__c/fields/VIP_Info__c.field-meta.xml
<CustomField>
    <fullName>VIP_Info__c</fullName>
    <label>VIP Info</label>
    <referenceTo>VIP_Info__c</referenceTo>
    <relationshipLabel>VIP Info Meal</relationshipLabel>
    <relationshipName>VIP_Info_Meal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>